--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>מחולל דפי עבודה במתמטיקה</h1>
+        <h1>המחולל של אופיר</h1>
         <div class="form">
             <div class="form-group">
                 <label for="title">כותרת:</label>
