--- a/index.html
+++ b/index.html
@@ -3,88 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>מחולל הקסמים של אופיר (בטא)</title>
+    <title>תיבת הקסמים של אופיר</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <script src="worksheetGenerator.js" defer></script>
 </head>
 <body>
     <div class="container">
-        <h1>מחולל הקסמים של אופיר (בטא)</h1>
-        <div class="form">
-            <div class="form-group">
-                <label for="title">כותרת:</label>
-                <input type="text" id="title" name="title" placeholder="כתוב כאן כותרת">
-            </div>
-            <div class="form-group">
-                <label for="level">רמת לימוד:</label>
-                <select id="level" name="level" onchange="checkLevel()">
-                    <option value="">בחר רמת לימוד</option>
-                    <option value="3">3 יח"ל</option>
-                    <option value="4">4 יח"ל</option>
-                    <option value="5">5 יח"ל</option>
-                </select>
-                <p id="level-warning" style="display:none; color: red;">ברמת לימוד של 3 יחידות אין צורך לדעת נגזרת.</p>
-            </div>
-            <div class="form-group">
-                <label for="topic">נושא:</label>
-                <select id="topic" name="topic" onchange="toggleSubTopic()">
-                    <option value="">בחר נושא</option>
-                    <option value="functions">פונקציות</option>
-                </select>
-            </div>
-            <div class="form-group" id="subTopicGroup" style="display:none;">
-                <label for="subTopic">תת-נושא:</label>
-                <select id="subTopic" name="subTopic" onchange="toggleFunctionType()">
-                    <option value="">בחר תת-נושא</option>
-                    <option value="derivative">נגזרת</option>
-                </select>
-            </div>
-            <div class="form-group" id="functionTypeGroup" style="display:none;">
-                <label for="functionType">סוג פונקציה:</label>
-                <select id="functionType" name="functionType" onchange="toggleFunctionType()">
-                    <option value="">בחר סוג פונקציה</option>
-                    <option value="polynomial">פולינום</option>
-                    <option value="product">מכפלה</option>
-                    <option value="quotient">מנה</option>
-                    <option value="root">שורש</option>
-                    <option value="combined">משולב</option>
-                    <option value="trigonometric">טריגונומטרי</option>
-                    <option value="logarithmic">לוגריתמי</option>
-                    <option value="exponential">אקספוננציאלי</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="numPages">מספר עמודים:</label>
-                <input type="number" id="numPages" name="numPages" min="1" max="10" value="1">
-            </div>
-            <div class="form-group">
-                <label for="customMessage">איחול בהצלחה:</label>
-                <input type="text" id="customMessage" name="customMessage" placeholder="כתוב כאן איחול בהצלחה">
-            </div>
-            <div class="form-group" id="includeAnswersGroup" style="display:none;">
-                <label for="includeAnswers">האם לכלול תשובות:</label>
-                <input type="checkbox" id="includeAnswers" name="includeAnswers">
-            </div>
-            <div class="button-group">
-                <button class="btn preview-btn" onclick="previewWorksheet()">תצוגה מקדימה</button>
-                <button class="btn print-btn" onclick="printWorksheet()">הדפס</button>
-            </div>
+        <h1>תיבת הקסמים של אופיר</h1>
+        <div class="button-group-vertical">
+            <button class="btn full-width-btn" onclick="location.href='worksheetGenerator.html'">מחולל דפי עבודה</button>
+            <button class="btn full-width-btn" onclick="location.href='lessonPlanGenerator.html'">מחולל הפרומט</button>
         </div>
-        <div id="worksheet-output" class="worksheet-output"></div>
-        <div id="answers-output" class="worksheet-output"></div>
     </div>
-    <script>
-        function checkLevel() {
-            const level = parseInt(document.getElementById('level').value);
-            const warning = document.getElementById('level-warning');
-            if (level === 3) {
-                warning.style.display = 'block';
-            } else {
-                warning.style.display = 'none';
-            }
-        }
-    </script>
 </body>
 </html>
